force-app/main/default/objects/LLC_BI__Application__c/fields/LLC_BI__Offer_Sorting_Preference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Offer_Sorting_Preference__c</fullName>
    <description>The user populates this optional picklist field to save the borrower’s offer sorting preference. By default, it will include lowest rate and lowest payment.</description>
    <inlineHelpText>Use this field to save the borrower’s offer sorting preference.</inlineHelpText>
    <label>Offer Sorting Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lowest Rate</fullName>
            </value>
            <value>
                <fullName>Lowest Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>