force-app/main/default/objects/LLC_BI__Application__c/fields/LLC_BI__Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requested_Amount__c</fullName>
    <description>The system automatically populates this field to display the borrower’s requested loan amount value at the time of their credit application. The amount displayed in this field remains static throughout the lifecycle of the loan.</description>
    <inlineHelpText>This field displays the requested amount for the loan when the borrower begins the credit application.</inlineHelpText>
    <label>Requested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>